<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hubblog</string>

    <!-- Login -->
    <string name="password">Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="show_password">Show password</string>
    <string name="authenticator_conflict_message">Another installed app is already configured for GitHub authentication.\n\nYou must remove the other app from the Accounts &amp; sync settings and uninstall it before the GitHub app can be used.</string>
    <string name="authenticator_conflict_title">App Conflict</string>
    <string name="signup_link">New to GitHub? &lt;a href=\"https://github.com/plans\">Click here&lt;/a> to sign up</string>
    <string name="login_activity_authenticating">Logging in…</string>
    <string name="error_orgs_load">Loading account &amp; organizations failed</string>

    <!-- Sidebar -->
    <string name="sidebar_open_title">All Articles</string>
    <string name="sidebar_open_subtitle">Select an article to view</string>
    <string name="sidebar_add_new">New Article</string>

    <!-- Action bar -->
    <string name="edit_article_subtitle">Edit Article</string>
    <string name="edit_markdown_subtitle">Edit Markdown</string>
    <string name="commit_article_subtitle">Post Article to GitHub Pages</string>

    <!-- Tab Pages -->
    <string name="add_metadata_desc">Add metadata tags to each article. These can be used as attributes within GH-Pages.</string>
    <string name="add_metadata_edit">Add your tag as a key:value</string>

    <string name="save_options_desc">You can choose how to save the article. Saving as draft will commit the post to your GH-Pages repository, but in the _drafts folder. Save to live will make the article available on your main GH-Pages site.</string>

    <string name="article_markdown">## Hubblog How-to</string>
    <string name="default_article_title">Untitled Article</string>

    <!-- Menu Items -->
    <string name="ab_menu_title">Menu</string>
    <string name="ab_menu_change_title">Edit Article Title</string>
    <string name="ab_menu_delete_article">Delete Article</string>
    <string name="ab_menu_invert_display">Invert Display</string>
    <string name="ab_menu_add_site">Add New Site</string>
    <string name="ab_menu_default_tags">Set Default Tags</string>
    <string name="ab_menu_about">About</string>

    <!-- Preferences -->
    <string name="pref_account_details_title">GitHub Account Details</string>


    <!-- Dialogs -->
    <string name="ok_btn">Ok</string>
    <string name="cancel_btn">Cancel</string>

    <string name="dialog_select_site_title">Add Article to Site</string>

    <string name="dialog_edit_article_title">Edit Article Title</string>

    <string name="dialog_delete_article_title">Delete Article</string>
    <string name="dialog_delete_article_message">Are you sure you want to delete this article?</string>

    <string name="dialog_add_site_title">Delete Article</string>
    <string name="dialog_add_site_message">Enter the title of your new site. Note: there is no need to add the GH-Pages domain (e.g github.io) as this will be added automatically.</string>

    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">
        This app was created to make it quick and easy to write articles while on the move.
        \nAs Hubblog only publishes to GitHub Pages, there is a restriction on writing articles in either Markdown or plain text.
        \n\nHubblog is in no way affiliated with GitHub and just connects to their fantastic service.
        \n\nIf you like using this app and would like to donate, that would be much appreciated! The donate button below will open PayPal in a new browser window:
    </string>

    <string name="dialog_about_message_github">
        This app is open source. You can view all of the latest code at the GitHub repository by clicking on the button below. Again, it will open in a new browser window.
    </string>

    <string name="dialog_account_needed_title">Account Details</string>
    <string name="dialog_account_needed_message">
        In order to properly use Hubblog, details of your GitHub account need to be provided. You can change them at any time via the settings menu.
    </string>
</resources>